# dl_interceptor_ex

./: CMakeLists.txt  README.md  README_zh.md  build_ndk.ps1  run.ps1
include/: dl_interceptor.h
injector/: CMakeLists.txt  bin2hex.py  injector.cpp
nothing/jni/: Android.mk  dl_interceptor_nothing.c
src/: dl_interceptor.cpp  mini_hook.hpp
